tests/snapshots/test_runner__tests__compiler__typecheck__if_expression_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# Both branches type must match
let x: Null = if true "hello" null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/if_expression_2.kk:2:31
  │
2 │ let x: Null = if true "hello" null
  │                               ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Null      |
    +---------------+-------------+
